--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -2,7 +2,7 @@
   "name": "gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon index.ts",
     "start:production": "NODE_ENV=production env-cmd -f .env.production nodemon index.ts"
