--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -20,5 +20,8 @@
     "graphql": "^16.6.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.3"
   }
 }
