Add express configs and cors

--- a/Gateway/.env.example
+++ b/Gateway/.env.example
@@ -1,4 +1,11 @@
-GATEWAY_URL=
-USER_SERVICE_URL=
-PRODUCT_SERVICE_URL=
-PAYMENT_SERVICE_URL=
+DEV_GATEWAY_URL=http://localhost:4000
+DEV_USER_SERVICE_URL=http://localhost:4001
+DEV_PRODUCT_SERVICE_URL=http://localhost:4002
+DEV_PAYMENT_SERVICE_URL=http://localhost:4003
+DEV_REACT_APP_URL=http://localhost:3000
+
+PROD_GATEWAY_URL=
+PROD_USER_SERVICE_URL=
+PROD_PRODUCT_SERVICE_URL=
+PROD_PAYMENT_SERVICE_URL=
+PROD_REACT_APP_URL=
