--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -2,18 +2,21 @@
   "name": "gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
-    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' index.ts",
-    "start:production": "NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' index.ts"
+    "compile": "tsc",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
+    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/gateway": "^2.2.1",
-    "apollo-server": "^3.11.1",
+    "@apollo/server": "^4.2.2",
+    "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -22,6 +25,9 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.3"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.12",
+    "typescript": "^4.9.4"
   }
 }
