--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "graphql": "^16.6.0",
     "jest": "^29.3.1",
     "mongoose": "^6.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.12",
+    "typescript": "^4.9.4"
   }
 }
