--- a/Gateway/.env.example
+++ b/Gateway/.env.example
@@ -1,11 +1,7 @@
-DEV_GATEWAY_URL=http://localhost:4000
-DEV_USER_SERVICE_URL=http://localhost:4001
-DEV_PRODUCT_SERVICE_URL=http://localhost:4002
-DEV_PAYMENT_SERVICE_URL=http://localhost:4003
-DEV_REACT_APP_URL=http://localhost:3000
+GATEWAY_URL=http://localhost:4000
+USER_SERVICE_URL=http://localhost:4001
+PRODUCT_SERVICE_URL=http://localhost:4002
+PAYMENT_SERVICE_URL=http://localhost:4003
+REACT_APP_URL=http://localhost:3000
 
-PROD_GATEWAY_URL=
-PROD_USER_SERVICE_URL=
-PROD_PRODUCT_SERVICE_URL=
-PROD_PAYMENT_SERVICE_URL=
-PROD_REACT_APP_URL=
+
