--- a/UserService/package.json
+++ b/UserService/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
+    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +21,11 @@
     "graphql": "^16.6.0",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
-    "tsconfig.json": "^1.0.11",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/node": "^18.11.14",
     "typescript": "^4.9.4"
   }
