--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -4,25 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
+    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.11.14",
-    "typescript": "^4.9.4"
-  },
   "dependencies": {
-    "@apollo/server": "^4.3.0",
-    "@apollo/subgraph": "^2.2.2",
+    "@apollo/gateway": "^2.2.1",
+    "@apollo/server": "^4.2.2",
+    "body-parser": "^1.20.1",
+    "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
-    "tsconfig.json": "^1.0.11",
-    "uuid": "^9.0.0"
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.12",
+    "typescript": "^4.9.4"
   }
 }
