--- a/package.json
+++ b/package.json
@@ -17,12 +17,7 @@
   },
   "homepage": "https://github.com/capstone-bazaar/e-commerce-api#readme",
   "dependencies": {
-    "@apollo/server": "^4.2.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "graphql": "^16.6.0",
-    "jest": "^29.3.1",
-    "mongoose": "^6.7.4"
+    "jest": "^29.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
