--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -2,7 +2,7 @@
   "name": "productservice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "compile": "tsc",
     "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
@@ -12,22 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/gateway": "^2.2.1",
-    "@apollo/server": "^4.2.2",
-    "body-parser": "^1.20.1",
-    "concurrently": "^7.6.0",
-    "cors": "^2.8.5",
+    "@apollo/server": "^4.3.0",
+    "@apollo/subgraph": "^2.2.2",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.12",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.14",
     "typescript": "^4.9.4"
   }
 }
