--- a/UserService/package.json
+++ b/UserService/package.json
@@ -19,6 +19,8 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
+    "graphql-tag": "^2.12.6",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
