--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -19,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
