--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "E-commerce app (Backend)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-service-product:dev": "NODE_ENV=development env-cmd -f ./ProductService/.env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./ProductService/src/index.ts",
+    "start-service-user:dev": "NODE_ENV=development env-cmd -f ./UserService/.env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./UserService/src/index.ts",
+    "start-gateway:dev": "NODE_ENV=development env-cmd -f ./Gateway/.env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./Gateway/src/index.ts",
+    "start-services:dev": "concurrently \"npm:start-service-*:dev\""
   },
   "repository": {
     "type": "git",
@@ -17,7 +20,11 @@
   },
   "homepage": "https://github.com/capstone-bazaar/e-commerce-api#readme",
   "dependencies": {
-    "jest": "^29.3.1"
+    "concurrently": "^7.6.0",
+    "env-cmd": "^10.1.0",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
