--- a/UserService/package.json
+++ b/UserService/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec npx ts-node ./src/index.ts",
     "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
-    "@types/node": "^18.11.14",
+    "@types/node": "^18.11.15",
     "typescript": "^4.9.4"
   }
 }
