--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
     "graphql": "^16.6.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
