--- a/UserService/package.json
+++ b/UserService/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@apollo/subgraph": "^2.2.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
@@ -21,6 +23,7 @@
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
