--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -23,12 +23,14 @@
     "express-jwt": "^7.7.7",
     "graphql": "^16.6.0",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "wait-on": "^7.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.12",
+    "@types/wait-on": "^5.3.1",
     "typescript": "^4.9.4"
   }
 }
