--- a/MailService/package.json
+++ b/MailService/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mailgun.js": "^8.0.6",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   },
