--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
     "typescript": "^4.9.4"
   }
