--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -5,8 +5,8 @@
   "main": "./src/index.ts",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "cross-env NODE_ENV=development -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
-    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
+    "start:dev": "NODE_ENV=development env-cmd -f .env.production nodemon --exec npx ts-node ./dist/index.js",
+    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec ts-node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,6 @@
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
     "wait-on": "^7.0.1"
   },
   "devDependencies": {
@@ -32,6 +31,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.12",
     "@types/wait-on": "^5.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
