--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./src/index.ts",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.production nodemon --exec npx ts-node ./dist/index.js",
     "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
@@ -20,14 +20,14 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "mongoose": "^6.8.0",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "mongoose": "^6.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
