--- a/UserService/package.json
+++ b/UserService/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --watch './**/*.ts' --exec npx ts-node ./src/index.ts",
-    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
+    "start:dev": "NODE_ENV=development env-cmd -f .env.production nodemon --exec ts-node ./dist/index.js",
+    "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec ts-node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,13 +25,13 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.15",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
