--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "E-commerce app (Backend)",
   "main": "index.js",
   "scripts": {
-    "start-service-product:dev": "NODE_ENV=development env-cmd -f ./ProductService/.env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./ProductService/src/index.ts",
-    "start-service-user:dev": "NODE_ENV=development env-cmd -f ./UserService/.env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./UserService/src/index.ts",
-    "start-gateway:dev": "NODE_ENV=development env-cmd -f ./Gateway/.env.development nodemon --watch './**/*.ts' --exec 'ts-node' ./Gateway/src/index.ts",
+    "start-service-product:dev": "NODE_ENV=development env-cmd -f ./ProductService/.env.development nodemon --watch './**/*.ts' --exec  npx ts-node ./ProductService/src/index.ts",
+    "start-service-user:dev": "NODE_ENV=development env-cmd -f ./UserService/.env.development nodemon --watch './**/*.ts' --exec ts-node ./UserService/src/index.ts",
+    "start-gateway:dev": "NODE_ENV=development env-cmd -f ./Gateway/.env.development nodemon --watch './**/*.ts' --exec ts-node ./Gateway/src/index.ts",
     "start-services:dev": "concurrently \"npm:start-service-*:dev\""
   },
   "repository": {
@@ -23,12 +23,12 @@
     "concurrently": "^7.6.0",
     "env-cmd": "^10.1.0",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.12",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
