--- a/UserService/package.json
+++ b/UserService/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "NODE_ENV=development env-cmd -f .env.production nodemon --exec ts-node ./dist/index.js",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --exec ts-node ./dist/index.js",
     "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec ts-node ./dist/index.js"
   },
   "keywords": [],
