--- a/OrderService/package.json
+++ b/OrderService/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "paymentservice",
+  "name": "orderservice",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --exec npx ts-node ./dist/index.js",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --exec ts-node ./dist/index.js",
     "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
