--- a/MailService/package.json
+++ b/MailService/package.json
@@ -5,13 +5,14 @@
   "main": "./src/index.ts",
   "scripts": {
     "compile": "tsc",
-    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --exec npx ts-node ./dist/index.js",
+    "start:dev": "NODE_ENV=development env-cmd -f .env.development nodemon --exec npx ts-node ./src/index.ts",
     "start:production": "npm run compile && NODE_ENV=production env-cmd -f .env.production nodemon --watch './**/*.ts' --exec 'ts-node' ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -22,6 +23,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.14",
