--- a/OrderService/package.json
+++ b/OrderService/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@apollo/subgraph": "^2.2.2",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
@@ -25,6 +26,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.14",
     "typescript": "^4.9.4"
