--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@apollo/subgraph": "^2.2.2",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
@@ -23,6 +24,7 @@
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
