--- a/UserService/package.json
+++ b/UserService/package.json
@@ -16,6 +16,7 @@
     "@apollo/subgraph": "^2.2.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
@@ -28,6 +29,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.15",
     "nodemon": "^2.0.20",
