--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@apollo/gateway": "^2.2.1",
     "@apollo/server": "^4.2.2",
+    "@profusion/apollo-federation-upload": "^4.0.0",
+    "apollo-server-env": "^4.2.1",
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
@@ -22,6 +24,7 @@
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
     "graphql": "^16.6.0",
+    "graphql-upload": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "wait-on": "^7.0.1"
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/graphql-upload": "^15.0.2",
     "@types/node": "^18.11.12",
     "@types/wait-on": "^5.3.1",
     "ts-node": "^10.9.1",
