--- a/UserService/package.json
+++ b/UserService/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1323.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
@@ -26,6 +27,7 @@
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
+    "nanoid": "^3.3.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
