--- a/UserService/package.json
+++ b/UserService/package.json
@@ -34,6 +34,7 @@
     "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.15",
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
