--- a/OrderService/package.json
+++ b/OrderService/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "mongoose": "^6.8.0",
+    "nanoid": "^4.0.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   },
