--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/capstone-bazaar/e-commerce-api#readme",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "apollo-server-env": "^4.2.1",
     "concurrently": "^7.6.0",
     "env-cmd": "^10.1.0",
