--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "apollo-server-env": "^4.2.1",
+    "axios": "^1.3.6",
     "concurrently": "^7.6.0",
     "env-cmd": "^10.1.0",
     "jest": "^29.3.1",
