--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -15,13 +15,15 @@
     "@apollo/server": "^4.3.0",
     "@apollo/subgraph": "^2.2.2",
     "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1371.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
