--- a/OrderService/package.json
+++ b/OrderService/package.json
@@ -16,6 +16,7 @@
     "@apollo/subgraph": "^2.2.2",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.14",
     "typescript": "^4.9.4"
