--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "concurrently": "^7.6.0",
     "env-cmd": "^10.1.0",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "rabbitmq": "^0.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
