--- a/ProductService/package.json
+++ b/ProductService/package.json
@@ -17,6 +17,7 @@
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1371.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.17",
