--- a/UserService/package.json
+++ b/UserService/package.json
@@ -19,6 +19,7 @@
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1323.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.15",
     "@types/uuid": "^9.0.1",
