Add doc for api

--- a/MailService/.env.example
+++ b/MailService/.env.example
@@ -1,4 +1,6 @@
-PORT=
-MAIL_SERVICE_SECRET_KEY=
-MAIL_GUN_DOMAIN=
-MAIL_GUN_API_KEY=
+PORT=4004
+MAIL_SERVICE_SECRET_KEY=<YOUR_MAIL_SERVICE_SECRET_KEY>
+MAIL_GUN_DOMAIN=<YOUR_MAIL_GUN_DOMAIN>
+MAIL_GUN_API_KEY=<YOUR_MAIL_GUN_API_KEY>
+CLIENT_URL=http://localhost:3000/
+
