--- a/OrderService/.env.example
+++ b/OrderService/.env.example
@@ -1,3 +1,7 @@
-PORT=
-DB_PORT=
-DB_NAME=
+PORT=4003
+DB_PORT=27017
+DB_NAME=ecommerce_test
+DB_DOMAIN=localhost
+MAIL_SERVICE_TOKEN=<YOUR_MAIL_SERVICE_TOKEN>
+PRODUCT_SERVICE_URL=http://localhost:4002
+USER_SERVICE_URL=http://localhost:4001
