--- a/ProductService/.env.example
+++ b/ProductService/.env.example
@@ -1,4 +1,9 @@
-PORT=
-DB_PORT=
-DB_NAME=
-MAIL_SERVICE_TOKEN=
+PORT=4002
+DB_PORT=27017
+DB_DOMAIN=localhost
+DB_NAME=ecommerce_test
+MAIL_SERVICE_TOKEN=<your-mail-service-token>
+R2_BUCKET_NAME=<YOUR_R2_BUCKET_NAME>
+R2_ACCOUNT_ID=<YOUR_R2_ACCOUNT_ID>
+R2_ACCESS_KEY=<YOUR_R2_ACCESS_KEY>
+R2_SECRET_ACCESS_KEY=<YOUR_R2_SECRET_ACCESS_KEY>
