--- a/Gateway/.env.example
+++ b/Gateway/.env.example
@@ -3,5 +3,4 @@ USER_SERVICE_URL=http://localhost:4001
 PRODUCT_SERVICE_URL=http://localhost:4002
 PAYMENT_SERVICE_URL=http://localhost:4003
 REACT_APP_URL=http://localhost:3000
-
-
+JWT_SECRET=<YOUR_JWT_SECRET>
