--- a/UserService/.env.example
+++ b/UserService/.env.example
@@ -1,4 +1,10 @@
-PORT=
-DB_PORT=
-DB_NAME=
-MAIL_SERVICE_TOKEN=
+PORT=4001
+DB_PORT=27017
+DB_NAME=ecommerce_test
+DB_DOMAIN=localhost
+JWT_SECRET=<YOUR_WT_SECRET>
+R2_BUCKET_NAME=<YOUR_R2_BUCKET_NAME>
+R2_ACCOUNT_ID=<YOUR_R2_ACCOUNT_ID>
+R2_ACCESS_KEY=<YOUR_R2_ACCESS_KEY>
+R2_SECRET_ACCESS_KEY=<YOUR_R2_SECRET_ACCESS_KEY>
+MAIL_SERVICE_TOKEN=<YOUR_MAIL_SERVICE_TOKEN>
